# harness-code

./: .gitignore  AGENTS.md  Cargo.toml  QUERY_ENGINE_HANDOFF.md  QUERY_ENGINE_IMPLEMENTATION_PLAN.md  QUERY_ENGINE_MIGRATION.md  QUERY_ENGINE_STATUS.md  README.md  clippy.toml  rustfmt.toml
.cargo/: config.toml
agents/: coordinator.yaml  implementer.yaml  researcher.yaml
configs/: opencode.example.json
docs/: architecture.md  cxx-migration.md  protocol.md
hcode/: Cargo.toml
hcode-config/: Cargo.toml
hcode-config/src/: agent.rs  config.rs  lib.rs  provider.rs  substitution.rs
hcode-engine/: AGENTS.md  Cargo.toml
hcode-engine/src/: budget.rs  coordinator.rs  error_recovery.rs  event.rs  lib.rs  pool.rs  query_engine.rs  state.rs  stop_hooks.rs  streaming_tool_executor.rs  tool_orchestration.rs  tool_result_budget.rs  worker.rs
hcode-engine/src/compact/: auto.rs  micro.rs  mod.rs  reactive.rs
hcode-engine/src/coordinator/: message_router.rs  mod.rs  notification.rs  worker_registry.rs
hcode-engine/src/hooks/: events.rs  executor.rs  mod.rs  registry.rs
hcode-engine/src/plugins/: loader.rs  mod.rs  types.rs
hcode-engine/src/worker/: communication.rs  execution.rs  mod.rs  state.rs
hcode-mcp/: Cargo.toml
hcode-mcp/src/: client.rs  lib.rs  protocol.rs
hcode-mcp/tests/: protocol_test.rs
hcode-permission/: Cargo.toml
hcode-permission/src/: engine.rs  lib.rs  result.rs  rule.rs
hcode-protocol/: Cargo.toml
hcode-protocol/src/: lib.rs  sse.rs  stream_event.rs  xml.rs
hcode-provider/: Cargo.toml
hcode-provider/src/: lib.rs  provider.rs  registry.rs
hcode-provider/src/anthropic/: client.rs  mod.rs  stream.rs  types.rs
hcode-provider/src/openai/: client.rs  mod.rs  types.rs
hcode-session/: Cargo.toml
hcode-session/src/: json_storage.rs  lib.rs  session.rs  storage.rs
hcode-tools/: Cargo.toml
hcode-tools/src/: context.rs  lib.rs  registry.rs  result.rs  tool.rs
hcode-tools/src/agent/: built_in.rs  mod.rs  schema.rs  spawner.rs
hcode-tools/src/ask/: mod.rs
hcode-tools/src/bash/: executor.rs  mod.rs  sandbox.rs  schema.rs
hcode-tools/src/file_edit/: editor.rs  mod.rs  schema.rs
hcode-tools/src/file_read/: mod.rs  reader.rs  schema.rs
hcode-tools/src/file_write/: mod.rs  schema.rs  writer.rs
hcode-tools/src/glob_tool/: mod.rs  schema.rs  searcher.rs
hcode-tools/src/grep_tool/: mod.rs  schema.rs  searcher.rs
hcode-tools/src/lsp/: mod.rs
hcode-tools/src/send_message/: mod.rs  schema.rs
hcode-tools/src/skill/: loader.rs  mod.rs  schema.rs
hcode-tools/src/task_output/: mod.rs  schema.rs
hcode-tools/src/task_stop/: mod.rs  schema.rs
hcode-tools/src/todo/: mod.rs
hcode-tools/src/web_fetch/: mod.rs  schema.rs
hcode-tools/src/web_search/: mod.rs  schema.rs
hcode-tools/tests/: agent_tool_test.rs  bash_tool_test.rs  file_edit_tool_test.rs  file_read_tool_test.rs  file_write_tool_test.rs  glob_tool_test.rs  grep_tool_test.rs  integration_test.rs
hcode-types/: Cargo.toml
hcode-types/src/: error.rs  lib.rs  message.rs  notification.rs  permission.rs  tool.rs  usage.rs
hcode/src/: cli.rs  interactive.rs  main.rs
hcode/src/commands/: agent.rs  config.rs  mod.rs  run.rs
hcode/src/slash_commands/: clear.rs  compact.rs  doctor.rs  exit.rs  help.rs  mod.rs  registry.rs
