[package]
name = "hcode-config"
version.workspace = true
edition.workspace = true

[dependencies]
hcode-types.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
regex.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile.workspace = true