[package]
name = "hcode-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
# Internal
hcode-types.workspace = true
hcode-tools.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true