[package]
name = "hcode-provider"
version.workspace = true
edition.workspace = true

[dependencies]
hcode-types.workspace = true
hcode-protocol.workspace = true
hcode-config.workspace = true
tokio.workspace = true
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
thiserror.workspace = true
eventsource-stream.workspace = true
pin-project = "1"
bytes = "1"