[package]
name = "hcode-tools"
version.workspace = true
edition.workspace = true

[dependencies]
# Internal
hcode-types.workspace = true
hcode-permission.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

# Error handling
thiserror.workspace = true

# File operations
glob = "0.3"
walkdir = "2"
regex.workspace = true

# HTTP
reqwest.workspace = true

# URL encoding
url = "2"

# Utilities
parking_lot.workspace = true
chrono.workspace = true
uuid.workspace = true

# Testing
tempfile.workspace = true